--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "smm_ai_bot",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon bot.js",
