--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sqlite3": "^5.1.7"
   }
 }
